--- a/D3 HW/index.html
+++ b/D3 HW/index.html
@@ -11,7 +11,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://unpkg.com/d3-v6-tip@1.0.6/build/d3-v6-tip.js"></script>
-    <script type="text/javascript" src="assets/js/app.js"></script>
+    <script type="text/javascript" src="assets/js/app4.js"></script>
 </head>
 
 <body>
@@ -31,15 +31,9 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="article">
-                    <h2>Correlations Discovered Between Health Risks and Age, Income</h2>
-                    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies
-                        mi vitae est. Mauris placerat eleifend leo.</p>
-
-                    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies
-                        mi vitae est. Mauris placerat eleifend leo.</p>
-
-                    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies
-                        mi vitae est. Mauris placerat eleifend leo.</p>
+                    <h2>Conclusions</h2>
+                    <p>Overall there doesn't appear to be any strong correlations when comparing the data.</p>
+                    <p>I did find it interesting that their appeared to be a slightly positive correlation between Household Income and both Smokers as well as Obesity. I suppose those with more money are more likely to afford more food and cigarettes.</p>
                 </div>
             </div>
         </div>
