--- a/D3 HW/index.html
+++ b/D3 HW/index.html
@@ -11,7 +11,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://unpkg.com/d3-v6-tip@1.0.6/build/d3-v6-tip.js"></script>
-    <script type="text/javascript" src="assets/js/app4.js"></script>
+    <script type="text/javascript" src="assets/js/app.js"></script>
 </head>
 
 <body>
