--- a/Leaflet Mapping HW/index.html
+++ b/Leaflet Mapping HW/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Live Earthquakes</title>
+    <title>Real Time Earthqakes</title>
     <!-- Leaflet CSS -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <!-- Boostrap -->
