Pushing Leaflet HW

--- a/Leaflet Mapping HW/index.html
+++ b/Leaflet Mapping HW/index.html
@@ -42,7 +42,7 @@
     <hr style="color:lightgray; border-width: 3px;">
 
     <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
-        <button type="button" class="btn btn-primary">Filters</button>
+        <button type="button" class="btn btn-primary">Time Filter</button>
         <div class="btn-group" role="group">
             <select id="timeframe">
                 <option value="all_hour">Past Hour</option>
